Fixed wrong (#$@!!!) formulas from algowiki-project.org, added a test to Main